--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-Hey there! 
-
-My name is Dhanush Kishore. I am a Senior Data Scientist at a tech company in London. I enjoy going on long walks, cooking, and learning new things. Currently, I am trying to learn Spanish, and pick up Tennis. 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dhanush Kishore(Senior Data Scientist)'s personal page">
+    <title>Dhanush Kishore</title>
+</head>
+<body>
+    <h1>Hey there!</h1>
+    <p>My name is Dhanush Kishore. I am a Senior Data Scientist at a tech company in London. I enjoy going on long walks, cooking, and learning new things.</p>
+    <p>Currently, I am trying to learn Spanish and pick up Tennis.</p>
+</body>
+</html>
