--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Hey there!</h1>
     <p>My name is Dhanush Kishore. I am a Senior Data Scientist at a tech company in London. I enjoy going on long walks, cooking, and learning new things.</p>
-    <p>Currently, I am trying to learn Spanish and pick up Tennis.</p>
+    <p>Currently, I am trying to learn Spanish and pick up Tennis.I mostly do not use any social media, but I am on <a href="https://www.linkedin.com/in/dhanushkishore/" target="_blank">LinkedIn</a>, 
+        where you can get in touch with me if you like :) </p>
 </body>
 </html>
