--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
 </head>
 <body>
     <h1>Hey there!</h1>
-    <p>My name is Dhanush Kishore. I am a Senior Data Scientist at a tech company in London. I enjoy going on long walks, cooking, and learning new things.</p>
-    <p>Currently, I am trying to learn Spanish and pick up Tennis.I mostly do not use any social media, but I am on <a href="https://www.linkedin.com/in/dhanushkishore/" target="_blank">LinkedIn</a>, 
-        where you can get in touch with me if you like :) </p>
+<p>I am a Senior Data Scientist at Skyscanner, where I built our in-house Bayesian AB experimentation library, 
+    <a href="https://medium.com/@SkyscannerEng/wise-skyscanners-bayesian-ab-experimentation-library-and-decision-engine-6841d1643482">WISE</a>. 
+    Currently, I am developing ML models to rank flight search results. I have over a decade of experience in data science, analytics, 
+    ML model development and AB experimentation. I am extremely technical, and enjoy deep diving into the math behind each algorithm I use. 
+    Python is my go-to language, and I am constantly looking to grow my technical skills.</p>
+
+<p>Outside of work, I love going on long walks - London is an amazing city if you enjoy walking, with loads of parks around every corner. 
+    I am also a bit of a productivity nerd, and have gone down various rabbit holes of note taking and task management systems and apps. 
+    At present, I am trying to learn Tennis, and also have been trying to pick up Spanish.</p>
+
+<p>I prefer staying away from social media, but I do check my <a href="https://www.linkedin.com/in/dhanushkishore/">LinkedIn</a> 
+    regularly - feel free to reach out to me there if you would like to :)</p>
 </body>
 </html>
