--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
 
 <p>I prefer staying away from social media, but I do check my <a href="https://www.linkedin.com/in/dhanushkishore/">LinkedIn</a> 
     regularly - feel free to reach out to me there if you would like to :)</p>
+
+<img src="profile_pic.jpg" alt="Dhanush Kishore's Profile Picture" width="200">
 </body>
 </html>
