--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dhanush Kishore</title>
 </head>
 <body>
-    <h1>Hey there!</h1>
+    <h1>Hey there!👋</h1>
 <p>I am a Senior Data Scientist at Skyscanner, where I built our in-house Bayesian AB experimentation library, 
     <a href="https://medium.com/@SkyscannerEng/wise-skyscanners-bayesian-ab-experimentation-library-and-decision-engine-6841d1643482">WISE</a>. 
     Currently, I am developing ML models to rank flight search results. I have over a decade of experience in data science, analytics, 
