--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Dhanush Kishore</title>
 </head>
 <body>
-    <h1>Hey there!👋</h1>
+    <p>Hey there!👋<p>
 <p>I am a Senior Data Scientist at Skyscanner, where I built our in-house Bayesian AB experimentation library, 
     <a href="https://medium.com/@SkyscannerEng/wise-skyscanners-bayesian-ab-experimentation-library-and-decision-engine-6841d1643482">WISE</a>. 
     Currently, I am developing ML models to rank flight search results. I have over a decade of experience in data science, analytics, 
     ML model development and AB experimentation. I am extremely technical, and enjoy deep diving into the math behind each algorithm I use. 
-    Python is my go-to language, and I am constantly looking to grow my technical skills.</p>
+    Python is my go-to language, and I am constantly looking to grow my technical skills.<p>
 
 <p>Outside of work, I love going on long walks - London is an amazing city if you enjoy walking, with loads of parks around every corner. 
     I am also a bit of a productivity nerd, and have gone down various rabbit holes of note taking and task management systems and apps. 
