--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dhanush Kishore</title>
+    <!-- CSS for styling -->
+    <style>
+        body {
+            line-height: 1.6;
+            font-size: 16px;
+            padding: 20px;
+            margin: 0 auto;
+            max-width: 800px;
+            text-align: center;
+        }
+
+        p {
+            margin: 20px 0;
+        }
+    </style>
 </head>
 <body>
     <p>Hey there!👋<p>
