Revise index.html for improved layout and styles

--- a/index.html
+++ b/index.html
@@ -1,35 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dhanush Kishore</title>
-    <!-- CSS for styling -->
-    <style>
-        body {
-            line-height: 1.6;
-            font-size: 16px;
-            padding: 20px;
-            margin: 0 auto;
-            max-width: 800px;
-        }
-
-        p {
-            margin: 20px 0;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dhanush Kishore</title>
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      line-height: 1.6;
+      font-size: 16px;
+      padding: 20px;
+      margin: 0 auto;
+      max-width: 700px;
+      color: #222;
+      background: #fafafa;
+    }
+    p {
+      margin: 1.2em 0;
+    }
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    img {
+      display: block;
+      margin: 2em 0;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
-    <p>Hey there!👋<p>
-<p>I am a Senior Data Scientist at Skyscanner, where I built our in-house Bayesian AB experimentation library,
-    <a href="https://medium.com/@SkyscannerEng/wise-skyscanners-bayesian-ab-experimentation-library-and-decision-engine-6841d1643482">WISE</a>. 
-    Currently, I am developing ML models to rank flight search results. I have over a decade of experience in data science, analytics, 
-    ML model development and AB experimentation. I am extremely technical, and enjoy deep diving into the math behind each algorithm I use. 
-    Python is my go-to language, and I am constantly looking to grow my technical skills.<p>
+  <p>Hey there 👋</p>
 
-<p>I prefer staying away from social media, but I do check my <a href="https://www.linkedin.com/in/dhanushkishore/">LinkedIn</a> 
-    regularly - feel free to reach out to me there if you would like to :)</p>
+  <p>
+    I am a Senior Data Scientist at Skyscanner, where I built our in-house Bayesian AB experimentation library, 
+    <a href="https://medium.com/@SkyscannerEng/wise-skyscanners-bayesian-ab-experimentation-library-and-decision-engine-6841d1643482" target="_blank">WISE</a>. 
+    Currently, I develop ML models to rank flight search results. I have over a decade of experience in data science, analytics, 
+    ML model development, and AB experimentation. I enjoy deep diving into the math behind algorithms I use. 
+    Python is my go-to language, and I am always looking to sharpen my technical skills.
+  </p>
 
-<img src="profile_pic.jpg" alt="Dhanush Kishore's Profile Picture" width="200">
+  <p>
+    On the side, I am building <a href="https://www.redactmypdf.com" target="_blank">RedactMyPDF.com</a>, 
+    an AI-powered tool that helps securely redact sensitive information from PDFs using AI.
+  </p>
+
+  <p>
+    I stay away from most social media, but I do check my 
+    <a href="https://www.linkedin.com/in/dhanushkishore/" target="_blank">LinkedIn</a> 
+    regularly. 
+  </p>
+
+  <img src="profile_pic.jpg" alt="Profile picture of Dhanush Kishore" width="200">
 </body>
 </html>
